tests/liquid/neg/simple/parse-00.js
var c = /*: {number | v < 0} */ 1;

var e = /*: {string | v = "aaaa"} */ "aaa";

